[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-cli"
version = "0.24.0"
description = "Command line interface to talk to pulpcore's REST API."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv2+"}
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-glue==0.24.0",
  "click>=8.0.0,<9.0.0",
  "PyYAML>=5.3,<6.1",
  "schema>=0.7.5,<0.8",
  "toml>=0.10.2,<0.11",
  "importlib_metadata>=4.8.0,<7.1;python_version<'3.10'",
]

[project.optional-dependencies]
pygments = ["pygments>=2.17.2,<2.18"]
shell = ["click-shell~=2.1"]
password-manager = ["SecretStorage>=3.3.3,<3.3.4"]

[project.urls]
documentation = "https://docs.pulpproject.org/pulp_cli/"
repository = "https://github.com/pulp/pulp-cli"
changelog = "https://docs.pulpproject.org/pulp_cli/CHANGES/"

[project.scripts]
pulp = "pulp_cli:main"

[project.entry-points."pulp_cli.plugins"]
ansible = "pulpcore.cli.ansible"
common = "pulpcore.cli.common"
container = "pulpcore.cli.container"
core = "pulpcore.cli.core"
file = "pulpcore.cli.file"
migration = "pulpcore.cli.migration"
python = "pulpcore.cli.python"
rpm = "pulpcore.cli.rpm"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulpcore.cli.*", "pulp_cli", "pytest_pulp_cli"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed", "locale/*/LC_MESSAGES/*.mo"]

[tool.pulp_cli_template]
app_label = ""
docs = true
translations = true
test_matrix = """
- python: "3.11"
  image_tag: "nightly"
  pulp_api_root: "/relocated/djnd/"
- python: "3.11"
  image_tag: "latest"
- python: "3.12"
  image_tag: "3.39"
- python: "3.12"
  image_tag: "3.28"
  lower_bounds: true
- python: "3.8"
  image_tag: "3.22"
- python: "3.9"
  image_tag: "3.21"
  pulp_api_root: "/relocated/djnd/"
- python: "3.10"
  image_tag: "3.18"
  lower_bounds: true
"""

[tool.towncrier]
filename = "docs/CHANGES.md"
directory = "CHANGES/"
title_format = "## {version} ({project_date})"
template = "CHANGES/.TEMPLATE.md"
issue_format = "[#{issue}](https://github.com/pulp/pulp-cli/issues/{issue})"
start_string = "[//]: # (towncrier release notes start)\n"
underlines = ["", "", ""]

[[tool.towncrier.section]]
path = ""
name = ""

[[tool.towncrier.section]]
path = "pulp-glue"
name = "Pulp GLUE"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "translation"
name = "Translations"
showcontent = true

[[tool.towncrier.type]]
directory = "devel"
name = "Developer Notes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip = ["pulp-glue"]

[tool.flake8]
exclude = ["./docs/*"]
ignore = ["W503", "Q000", "Q003", "D100", "D104", "D106", "D200", "D202", "D205", "D400", "D401", "D402"]
# E203: whitespace before ':'; https://github.com/psf/black/issues/279
# E401: multiple imports on one line
extend-ignore = ["E203", "E401"]
max-line-length = 100

[tool.pytest.ini_options]
markers = [
  "glue: tests for pulp-glue in isolation",
  "script: tests provided as shell scripts",
  "help_page: tests that render help pages",
  "pulpcore: pulpcore tests",
  "pulp_2to3_migration: pulp-2to3-migration tests",
  "pulp_file: pulp_file tests",
  "pulp_ansible: pulp_ansible tests",
  "pulp_container: pulp_container tests",
  "pulp_rpm: pulp_rpm tests",
  "pulp_python: pulp_python tests",
]

[tool.mypy]
strict = true
show_error_codes = true
files = "pulpcore/**/*.py, pulp_cli/**/*.py, tests/*.py, pytest_pulp_cli/**/*.py"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "click_shell.*",
  "gnupg.*",
  "schema.*",
]
ignore_missing_imports = true
