[build-system]
requires = ["setuptools<73"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-cli"
version = "0.29.1"
description = "Command line interface to talk to pulpcore's REST API."
readme = "README.md"
requires-python = ">=3.8,<3.14"
license = {text = "GPLv2+"}
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-glue==0.29.1",
  "click>=8.0.0,<9.0.0",
  "packaging>=20.0,<25",
  "PyYAML>=5.3,<6.1",
  "schema>=0.7.5,<0.8",
  "toml>=0.10.2,<0.11",
  "importlib_metadata>=4.8.0,<7.1;python_version<'3.10'",
]

[project.optional-dependencies]
pygments = ["pygments>=2.17.2,<2.19"]
shell = ["click-shell~=2.1"]
password-manager = ["SecretStorage>=3.3.3,<3.3.4"]

[project.urls]
documentation = "https://pulpproject.org/pulp-cli/docs/user/guides/installation/"
repository = "https://github.com/pulp/pulp-cli"
changelog = "https://pulpproject.org/pulp-cli/changes/"

[project.scripts]
pulp = "pulp_cli:main"

[project.entry-points."pulp_cli.plugins"]
ansible = "pulpcore.cli.ansible"
common = "pulpcore.cli.common"
container = "pulpcore.cli.container"
core = "pulpcore.cli.core"
file = "pulpcore.cli.file"
migration = "pulpcore.cli.migration"
python = "pulpcore.cli.python"
rpm = "pulpcore.cli.rpm"

[tool.setuptools.packages.find]
# This section is managed by the cookiecutter templates.
where = ["."]
include = ["pulpcore.cli.*", "pulp_cli", "pytest_pulp_cli"]
namespaces = true

[tool.setuptools.package-data]
# This section is managed by the cookiecutter templates.
"*" = ["py.typed", "locale/*/LC_MESSAGES/*.mo"]


[tool.pulp_cli_template]
# This section is co-managed by the cookiecutter templates.
# Changes to existing keys should be preserved.
app_label = ""
repository = "https://github.com/pulp/pulp-cli"
glue = true
docs = true
translations = true
main_package = "common"
binary_dependencies = ""

[tool.bumpversion]
# This section is managed by the cookiecutter templates.
current_version = "0.29.1"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<release>[a-z]+))?"
serialize = [
  "{major}.{minor}.{patch}.{release}",
  "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.release]
# This section is managed by the cookiecutter templates.
optional_value = "prod"
values = [
  "dev",
  "prod",
]

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pulp_cli/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pulp-glue/pulp_glue/common/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pulpcore/cli/common/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pulp-glue/pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the cookiecutter templates.
filename = "./pyproject.toml"
search = "\"pulp-glue=={current_version}\""
replace = "\"pulp-glue=={new_version}\""


[tool.towncrier]
# This section is managed by the cookiecutter templates.
filename = "CHANGES.md"
directory = "CHANGES/"
title_format = "## {version} ({project_date}) {{: #{version} }}"
template = "CHANGES/.TEMPLATE.md"
issue_format = "[#{issue}](https://github.com/pulp/pulp-cli/issues/{issue})"
start_string = "[//]: # (towncrier release notes start)\n"
underlines = ["", "", ""]

[[tool.towncrier.section]]
# This section is managed by the cookiecutter templates.
path = ""
name = ""

[[tool.towncrier.section]]
# This section is managed by the cookiecutter templates.
path = "pulp-glue"
name = "Pulp GLUE"

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "translation"
name = "Translations"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "devel"
name = "Developer Notes"
showcontent = true

[[tool.towncrier.type]]
# This section is managed by the cookiecutter templates.
directory = "misc"
name = "Misc"
showcontent = false


[tool.black]
# This section is managed by the cookiecutter templates.
line-length = 100
exclude = "cookiecutter"

[tool.isort]
# This section is managed by the cookiecutter templates.
profile = "black"
line_length = 100
skip = ["pulp-glue", "cookiecutter"]

[tool.flake8]
# This section is managed by the cookiecutter templates.
exclude = ["./docs/*", "./cookiecutter/*"]
ignore = ["W503", "Q000", "Q003", "D100", "D104", "D106", "D200", "D202", "D205", "D400", "D401", "D402"]
# E203: whitespace before ':'; https://github.com/psf/black/issues/279
# E401: multiple imports on one line
extend-ignore = ["E203", "E401"]
max-line-length = 100

[tool.pytest.ini_options]
markers = [
  "glue: tests for pulp-glue in isolation",
  "script: tests provided as shell scripts",
  "help_page: tests that render help pages",
  "pulpcore: pulpcore tests",
  "pulp_2to3_migration: pulp-2to3-migration tests",
  "pulp_file: pulp_file tests",
  "pulp_ansible: pulp_ansible tests",
  "pulp_container: pulp_container tests",
  "pulp_rpm: pulp_rpm tests",
  "pulp_python: pulp_python tests",
]

[tool.mypy]
# This section is managed by the cookiecutter templates.
strict = true
warn_unused_ignores = false
show_error_codes = true
files = "pulpcore/**/*.py, tests/*.py, pulp_cli/**/*.py, pytest_pulp_cli/**/*.py"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# This section is managed by the cookiecutter templates.
module = [
  "click_shell.*",
  "gnupg.*",
  "IPython.*",
  "schema.*",
]
ignore_missing_imports = true
