[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-glue"
version = "0.38.0.dev"
description = "Version agnostic glue library to talk to pulpcore's REST API."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "GPL-2.0-or-later"
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "multidict>=6.0.5,<6.8",
  "packaging>=22.0,<=26.0",  # CalVer
  "requests>=2.24.0,<2.33;python_version<'3.12'",
  "requests>=2.25.1,<2.33;python_version>='3.12'",
  "tomli>=2.0.0,<2.1;python_version<'3.11'",
]

[project.urls]
documentation = "https://pulpproject.org/pulp-glue/docs/dev/"
repository = "https://github.com/pulp/pulp-cli"
changelog = "https://pulpproject.org/pulp-cli/changes/"

[tool.uv.build-backend]
package-name = ["pulp_glue"]
namespace = true
source-exclude = ["*.pot", "*.po", "**/*\\~"]

[tool.setuptools.packages.find]
# This section is managed by the cookiecutter templates.
where = ["src"]
include = ["pulp_glue.*"]
namespaces = true

[tool.setuptools.package-data]
# This section is managed by the cookiecutter templates.
"*" = ["py.typed", "locale/*/LC_MESSAGES/*.mo"]


[tool.mypy]
# This section is managed by the cookiecutter templates.
strict = true
warn_unused_ignores = false
show_error_codes = true
files = "src/**/*.py, tests/**/*.py"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# This section is managed by the cookiecutter templates.
module = [
  "schema.*",
]
ignore_missing_imports = true

[tool.ruff]
# This section is managed by the cookiecutter templates.
line-length = 100

[tool.ruff.lint]
# This section is managed by the cookiecutter templates.
extend-select = ["I"]

