[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-glue"
version = "0.37.2"
description = "Version agnostic glue library to talk to pulpcore's REST API."
readme = "README.md"
requires-python = ">=3.10,<3.16"
license = "GPL-2.0-or-later"
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "multidict>=6.0.5,<6.8",
  "packaging>=20.0,<=26.2",  # CalVer
  "requests>=2.24.0,<2.33",
  "tomli>=2.0.0,<2.1;python_version<'3.11'",
]

[project.urls]
documentation = "https://pulpproject.org/pulp-glue/docs/dev/"
repository = "https://github.com/pulp/pulp-cli"
changelog = "https://pulpproject.org/pulp-cli/changes/"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulp_glue.*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed", "locale/*/LC_MESSAGES/*.mo"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
strict = true
show_error_codes = true
files = "pulp_glue/**/*.py, tests/**/*.py"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "schema.*",
]
ignore_missing_imports = true
