[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.__project_name }}"
version = "{{ cookiecutter.version }}"
description = "Command line interface to talk to pulpcore's REST API. ({{ cookiecutter.app_label | capitalize }} plugin commands)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv2+"}
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-cli>=0.23.1,<0.25",
  {%- if cookiecutter.glue %}
  "pulp-glue-{{ cookiecutter.app_label }}=={{ cookiecutter.version }}",
  {%- endif %}
]

[project.urls]
repository = "{{ cookiecutter.repository }}"
changelog = "{{ cookiecutter.repository }}/blob/main/CHANGES.md"

[project.entry-points."pulp_cli.plugins"]
{{ cookiecutter.app_label }} = "pulpcore.cli.{{ cookiecutter.app_label }}"

[tool.pulp_cli_template]
app_label = {{ cookiecutter.app_label | toml_value }}
glue = {{ cookiecutter.glue | toml_value }}
docs = {{ cookiecutter.docs | toml_value }}
translations = {{ cookiecutter.translations | toml_value }}

[tool.pytest.ini_options]
markers = [
  "script: tests provided as shell scripts",
  "help_page: tests that render help pages",
  "pulp_{{ cookiecutter.app_label }}: pulp_{{ cookiecutter.app_label }} tests",
]
